--- a/assets/styles/components/main-content.css
+++ b/assets/styles/components/main-content.css
@@ -3,4 +3,5 @@
     flex-flow: column nowrap;
     flex-grow: 1;
     padding: var(--spacing-large);
+    margin-top: var(--spacing-xlarge);
 }
